Update style.css htmo typo to html

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 @media (max-width: 480px) {
-    *, htmo, body {
+    *, html, body {
         overflow-x: hidden;
         max-width: 480px;
     }
